[gd_scene load_steps=6 format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[node name="MainLevel" type="Node"]

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4")

[node name="Polygon2D" type="Polygon2D" parent="ObjectiveArea"]
color = Color(0.227451, 0.690196, 0.87451, 0.25098)
polygon = PackedVector2Array(0, -1, 0, -1, 141, -1, 141, 80, 0, 80, 0, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(70.625, 40)
shape = SubResource("1")
debug_color = Color(0.2, 0.52549, 0.964706, 0.745098)

[node name="Label" type="Label" parent="ObjectiveArea/CollisionShape2D"]
offset_left = -46.625
offset_top = -12.0
offset_right = 47.375
offset_bottom = 11.0
text = "Go Here! ðŸ¤«"
metadata/_edit_use_anchors_ = true

[node name="BlueShip" parent="." instance=ExtResource("2")]
position = Vector2(72.7009, 421.901)
lock_rotation = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Node2D" parent="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
offset_left = 450.0
offset_top = 244.0
offset_right = 695.0
offset_bottom = 342.0
color = Color(0.180392, 1, 1, 0.498039)

[node name="Congratulations" type="Label" parent="CanvasLayer/Control"]
offset_left = 450.0
offset_top = 268.0
offset_right = 696.0
offset_bottom = 291.0
text = "Congratulations!"
horizontal_alignment = 1

[node name="To the next level" type="Label" parent="CanvasLayer/Control"]
offset_left = 455.0
offset_top = 295.0
offset_right = 694.0
offset_bottom = 318.0
text = "To the next level... ðŸ˜—"
horizontal_alignment = 1

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
